@@ -1,0 +1,299 @@
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+    <!--app version: 6.0.1501.27626-->
+    
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Bankwest Online Banking</title>
+<script type='text/javascript' src='/bwlogin/resources/scripts/jquery-1.7.1.min.js'></script>
+<script type="text/javascript" src='/bwlogin/resources/scripts/swfobject.js'></script>
+<script type="text/javascript" src='/bwlogin/resources/scripts/Common.tools.js'></script>
+<script type="text/javascript" src='/bwlogin/resources/scripts/Common.js?v=11'></script>
+
+    <script type="text/javascript" src='/bwlogin/resources/scripts/global.js'></script>
+
+<link href="/bwlogin/resources/stylesheets/global.css?v=20" rel="stylesheet" type="text/css"
+    media="screen, projection, print" />
+<link href="/bwlogin/resources/stylesheets/ibs_common.css?v=15" rel="stylesheet" type="text/css"
+    media="screen, projection, print" />
+<link href="/bwlogin/resources/stylesheets/datePicker.css" rel="stylesheet" type="text/css"
+    media="screen, projection, print" />
+<!--[if IE 6]>
+		<link href="/bwlogin/resources/stylesheets/ie6.css" rel="stylesheet" type="text/css" />
+		<![endif]-->
+<!--[if IE 7]>
+		<link href="/bwlogin/resources/stylesheets/ie7.css?v=15" rel="stylesheet" type="text/css" />
+		<![endif]-->
+<!--[if IE 8]>
+		<link href="/bwlogin/resources/stylesheets/ie8.css" rel="stylesheet" type="text/css" />
+		<![endif]-->
+<link href="/bwlogin/resources/stylesheets/print.css" rel="stylesheet" type="text/css"
+    media="print" />
+<link href="/bwlogin/resources/stylesheets/ibs_global.css?v=23" rel="stylesheet" type="text/css"
+    media="screen, projection, print" />
+<!--[if IE 6]>
+		<link href="/bwlogin/resources/stylesheets/ibs_ie6.css" rel="stylesheet" type="text/css" />
+        <![endif]-->
+<!--[if IE 7]>
+        <link href="/bwlogin/resources/stylesheets/ibs_ie7.css?v=1" rel="stylesheet" type="text/css" />
+		<![endif]-->
+<!--[if IE 8]>
+        <link href="/bwlogin/resources/stylesheets/ibs_ie8.css" rel="stylesheet" type="text/css" />
+		<![endif]-->
+<link href="/bwlogin/resources/stylesheets/ibs_print.css" rel="stylesheet" type="text/css"
+    media="print" />
+<link type="text/css" href="/bwlogin/resources/stylesheets/jqueryUI/smoothness/jquery-ui-1.8.13.custom.css"
+    rel="stylesheet" />
+
+<script language="javascript" type="text/javascript">
+	<!--
+    
+    function LoadInParentWindow(loadUrl) {
+        self.parent.opener.location.href = loadUrl;
+        self.parent.opener.focus();
+    }
+
+    if (top.location != self.location) {
+        top.location = self.location;
+    }
+
+    $("html").css('background', 'none');
+
+    -->
+</script>
+
+</head>
+<body class="noJS ibs_homepage">
+    <!--[if !IE]> START #leftColumn <![endif]-->
+    <div id="leftColumn">
+        <!--[if !IE]> START #logo <![endif]-->
+        <div id="logo">
+            <img src="resources/images/logo.png" id="imgLogo" alt="Bank West Logo" />
+        </div>
+        <!--[if !IE]> END #logo <![endif]-->
+    </div>
+    <!--[if !IE]> END #leftColumn <![endif]-->
+    <!--[if !IE]> START #contentContainer <![endif]-->
+    <div id="contentContainer" class="clearfix">
+        <div class="margins">
+            <div id="headingBar" class="dark clearfix">
+                <h1 class="noTextTransform">
+                    Bankwest Online Banking
+                    <span id="lblEnvironmentTitle"></span>
+                </h1>
+            </div>
+            <!--[if !IE]> START #contentColumn <![endif]-->
+            <div id="contentColumn" class="single">
+                <!--[if !IE]> START .home_leftColumn <![endif]-->
+                <div class="home_leftColumn">
+                    <div class="liteAnchor">
+                        <a href="ribLite.aspx" class="liteAnchorIcon">
+                            <img class="liteAnchor" src="Resources/Images/mobile.png" />
+                        </a><a href="ribLite.aspx"><span style="vertical-align: top; font-size: small;">mobile
+                            version</span> </a>
+                    </div>
+                    <div>
+                        <form name="Form1" method="get" action="service-message.html" id="Form1" autocomplete="off" class="fn_inlineValidation">
+<div>
+<input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
+<input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="XXX" />
+</div>
+
+<script type="text/javascript">
+//<![CDATA[
+var theForm = document.forms['Form1'];
+if (!theForm) {
+    theForm = document.Form1;
+}
+function __doPostBack(eventTarget, eventArgument) {
+    if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
+        theForm.__EVENTTARGET.value = eventTarget;
+        theForm.__EVENTARGUMENT.value = eventArgument;
+        theForm.submit();
+    }
+}
+//]]>
+</script>
+
+
+<div>
+
+	<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="XXX" />
+</div>
+                        <fieldset>
+                            <h2>
+                                Login
+                            </h2>
+                            
+                            
+<script src="Resources/Scripts/setdefaultbtn.js" language="javascript"></script>
+<script type="text/javascript" language="javascript">
+    $(document).ready(function () {
+        $("input[id$='txtUserID']").focus();
+        SetDefaultButton($("a[id$='btnLogin']"));
+        $('input:text,input:password').keypress(function (event) { DefaultButtonKeyPress(event); });
+
+        $('Form1').submit(function (event) {
+            submitButtonEvent();
+            return false;
+        });
+    });
+
+    function showHide(id, visible) {
+        var elem = document.getElementById(id);
+        if (visible) {
+            elem.style.display = "";
+        } else {
+            elem.style.display = "none";
+        }
+    }
+
+    function HideWarningMessage() {
+        showHide("divWarningMsg", false);
+    }
+
+    function CheckCapsLock(e) {
+        var myKeyCode = 0;
+        var myShiftKey = false;
+
+        HideWarningMessage();
+        // Internet Explorer 4+ 
+        if (document.all) {
+            myKeyCode = e.keyCode;
+            myShiftKey = e.shiftKey;
+            // Other browsers
+        } else if (document.getElementById) {
+            myKeyCode = e.which;
+            myShiftKey = e.shiftKey ? e.shiftKey : ((myKeyCode == 16) ? true : false);
+        }
+
+        if ((myKeyCode >= 65 && myKeyCode <= 90) && !myShiftKey) {
+            showHide("divWarningMsg", true);
+        } else if ((myKeyCode >= 97 && myKeyCode <= 122) && myShiftKey) {
+            showHide("divWarningMsg", true);
+        }
+    }
+</script>
+
+<div class="ctrlHolder clearfix">
+    <label for="AuthUC_txtUserID" id="AuthUC_lblUserID" class="noTextTransform">personal access number (PAN)</label>
+    <input name="AuthUC$txtUserID" type="text" maxlength="8" id="AuthUC_txtUserID" tabindex="1" class="text" onfocus="javascript:HideWarningMessage();" />
+    <a id="AuthUC_lnkForgottenPan" class="loginForgottenLabel" href="http://www.bankwest.com.au/help/personal/online-banking/logging-into-bob" target="_blank">forgotten your PAN?</a>
+</div>
+<div class="ctrlHolder clearfix">
+    <label for="AuthUC_txtData" id="AuthUC_lblHint">secure code</label>
+    <input name="AuthUC$txtData" type="password" maxlength="16" id="AuthUC_txtData" tabindex="2" class="text" onkeypress="javascript:CheckCapsLock(event);" /><a id="AuthUC_btnForgottenPassword" class="loginForgottenLabel" href="javascript:__doPostBack('AuthUC$btnForgottenPassword','')">reset your secure code online</a>
+</div>
+
+<div class="buttons clearfix">
+    <a id="AuthUC_btnLogin" tabindex="3" class="button primary login" href="javascript:__doPostBack('AuthUC$btnLogin','')">Login</a>
+    
+    
+    
+</div>
+<div class="info clearfix" style="display: none;" id="divWarningMsg">
+    <h2>
+        Note: Caps Lock is on.</h2>
+    <p>
+        Having Caps Lock on may cause you to enter your password incorrectly.</p>
+</div>
+
+                        </fieldset>
+                        </form>
+                    </div>
+                </div>
+                <!--[if !IE]> END .home_leftColumn <![endif]-->
+                <!--[if !IE]> START .home_rightColumn <![endif]-->
+                <div class="home_rightColumn topSpacer">
+                    <h2 class="icon_phone">
+                        need help?
+                    </h2>
+                    <ul class="linkList noMargin">
+                        <li class="indent"><a id="forgottenSecureCode" href="">reset your secure code online</a></li>
+                        <li class="indent"><a href="http://www.bankwest.com.au/help/personal/online-banking/logging-into-bob" target="_blank">
+                            forgotten your PAN?</a> </li>
+                        <li class="indent"><a href="http://www.bankwest.com.au/help/personal/online-banking" target="_blank">
+                            click here for online help</a> </li>
+                    </ul>
+                    <ul class="indent noMargin">
+                        <li>or call <b>1300 440 749</b> for customer service</li>
+                    </ul>
+                    <br />
+                    <h2 class="icon_security">
+                        security tips
+                    </h2>
+                    <ul class="indent noMargin">
+                        <li>we'll never ask for your login or account details by <a href="http://www.bankwest.com.au/security-centre/email-internet-security" target="_blank">email</a></li>
+                        <li>if something seems suspicious you should call us immediately</li>
+                    </ul>
+                    <ul class="linkList noMargin">
+                        <li class="indent"><a href="http://www.bankwest.com.au/security-centre"
+                            target="_blank">learn how to protect yourself online</a></li>
+                    </ul>
+                    <br />
+                    <p class="indent">
+                        <a href="http://www.bankwest.com.au/security-centre/online-banking-security" target="_blank">
+                            <img src="resources/images/img_promo_noLossSecurityGuarantee_small.gif" class="securityImage"
+                                alt="no loss security guarantee" />
+                        </a>
+                    </p>
+                    <ul id="classicPds" class="linkList separator noMargin">
+                        <li class="indent"><a href="http://www.bankwest.com.au/personal/our-services/ways-to-bank-with-us/online-banking/bankwest-online-banking-small-print"
+                            target="_blank">conditions of use</a> </li>
+                    </ul>
+                </div>
+                <!--[if !IE]> END .home_rightColumn <![endif]-->
+            </div>
+            <!--[if !IE]> END #contentColumn <![endif]-->
+            <!--[if !IE]> START #pageFooter <![endif]-->
+            <div id="pageFooter" class="dark">
+            </div>
+            <!--[if !IE]> END #pageFooter <![endif]-->
+        </div>
+    </div>
+    <!--[if !IE]> END #contentContainer <![endif]-->
+    <!--[if !IE]> START #footerContainer <![endif]-->
+    <div id="footerContainer" class="fixedBottom">
+        <!--[if !IE]> START #footer <![endif]-->
+        <div id="footer">
+            <div class="margins clearfix">
+                <div class="floatRight">
+                    <ul class="horizontal clearfix">
+                        <li>
+                            Sunday 07/04/2013 14:12
+                            WST </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--[if !IE]> END #footer <![endif]-->
+    </div>
+    <!--[if !IE]> END #footerContainer <![endif]-->
+    <script type="text/javascript">
+        if ((navigator.userAgent.indexOf('iPhone') != -1) || (navigator.userAgent.indexOf('iPod') != -1) || (navigator.userAgent.indexOf('iPad') != -1)) {
+            var obj = document.getElementById("footerContainer");
+            obj.style.visibility = "hidden";
+        }
+
+        $(function () {
+            $('#forgottenSecureCode').click(function () {
+                var link = $('#AuthUC_btnForgottenPassword').attr('href');
+                document.location = link;
+                return false;
+            });
+            $('#errorMessageLink').click(function () {
+                var link = $('#AuthUC_btnForgottenPassword').attr('href');
+                document.location = link;
+                return false;
+            });
+        });
+    </script>
+</body>
+</html>
+
+
+
+
+
