@@ -1,0 +1,78 @@
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head id="Head1"><title>
+	Important Information
+</title><span id="globalCss"><link href='https://ibs.bankwest.com.au/bwlogin/resources/stylesheets/global.css?v=30' rel='stylesheet' type='text/css' media='screen, projection, print' /></span> 
+	<!--[if IE 6]>
+	<span id="ie6Css"><link href='https://ibs.bankwest.com.au/bwlogin/resources/stylesheets/ie6.css?v=1' rel='stylesheet' type='text/css' media='screen, projection' /></span>
+	<![endif]-->
+	<!--[if IE 7]>
+	<span id="ie7Css"><link href='https://ibs.bankwest.com.au/bwlogin/resources/stylesheets/ie7.css?v=16' rel='stylesheet' type='text/css' media='screen, projection' /></span>
+	<![endif]-->
+	<!--[if IE 8]>
+	<span id="ie8Css"><link href='https://ibs.bankwest.com.au/bwlogin/resources/stylesheets/ie8.css' rel='stylesheet' type='text/css' media='screen, projection' /></span>
+	<![endif]-->
+	<!--[if IE 6]>
+	<link href="/cmweb/resources/stylesheets/ibs_ie6.css?v=2" rel="stylesheet" type="text/css" />
+	<![endif]-->
+	<!--[if IE 7]>
+	<link href="/cmweb/resources/stylesheets/ibs_ie7.css?v=3" rel="stylesheet" type="text/css" />
+	<![endif]-->
+	<!--[if IE 8]>
+	<link href="/cmweb/resources/stylesheets/ibs_ie8.css" rel="stylesheet" type="text/css" />
+	<![endif]-->
+    <span id="jqueryJS"><script type='text/javascript' src='https://ibs.bankwest.com.au/bwlogin/resources/scripts/jquery-1.7.1.min.js' ></script></span><span id="iframeJS"><script type='text/javascript' src='https://ibs.bankwest.com.au/bwlogin/resources/scripts/jquery.bgiframe.min.js?v=1' ></script></span><span id="swfObjectJS"><script type='text/javascript' src='https://ibs.bankwest.com.au/bwlogin/resources/scripts/swfobject.js' ></script></span>
+	<script type="text/javascript" src="/bwlogin/resources/scripts/global.js?v=9"></script>
+	<script type="text/javascript" src="/bwlogin/Resources/Scripts/common.js?v=20" language="javascript"></script>
+<link href="/bwlogin/resources/stylesheets/ibs_global.css?v=64" rel="stylesheet" type="text/css" media="screen, projection, print" /></head>
+<body>
+    <form name="form1" method="get" action="acct-balances.html" id="form1">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="XXX" />
+
+<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="XXX" />
+			<div id="leftColumn">
+				<div id="logo">
+					<img src="https://secureforms.bankwest.com.au/Blob/BW_Media/1269939509859.png" id="logoImage" width="91" height="87" alt="Bankwest" title="Bankwest" />
+				</div>
+			</div>
+			<div id="contentContainer" class="clearfix">
+				<div class="margins">
+                    <div class="interceptServiceHeader">This is a service message from Bankwest</div>
+
+					<div id="divInterceptContent"><!--[if !IE]> START #contentColumn <![endif]-->
+<!-- Intercept page view -->
+<div id="contentColumn" class="single">
+<link rel="stylesheet" type="text/css" href="/cs/resources/Bankwest/css/fonts.css" /><style type="text/css">body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td {    margin: 3px;    padding: 3px;}#gradient {width: 626px; color:#322832;font-size:14px;line-height:16px;padding:20px;-webkit-border-top-right-radius: 20px; /* Safari & Chrome */-moz-border-top-right-radius: 20px; /* Firefox */-ms-border-top-right-radius: 20px 10px; /* Internet Explorer */-o-border-top-right-radius: 20px; /* Opera */border-top-right-radius: 20px; /* W3C */background: #6bc1d3; /* Old browsers *//* IE9 SVG, needs conditional override of 'filter' to 'none' */background: -moz-linear-gradient(top, #6bc1d3 0%, #a8e8f0 82%); /* FF3.6+ */background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6bc1d3), color-stop(82%,#a8e8f0)); /* Chrome,Safari4+ */background: -webkit-linear-gradient(top, #6bc1d3 0%,#a8e8f0 82%); /* Chrome10+,Safari5.1+ */background: -o-linear-gradient(top, #6bc1d3 0%,#a8e8f0 82%); /* Opera 11.10+ */background: -ms-linear-gradient(top, #6bc1d3 0%,#a8e8f0 82%); /* IE10+ */background: linear-gradient(to bottom, #6bc1d3 0%,#a8e8f0 82%); /* W3C */filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6bc1d3', endColorstr='#a8e8f0',GradientType=0 ); /* IE6-8 */ }#gradient p, #gradient h2, #gradient ul li {font-family:'BankwestRoundedLight','Arial';}.interceptBullet {line-height:20px;font-size:14px;background:url('https://img.bankwest.com.au/Blob/BW_Media/1292496207394.png') no-repeat 0px 8px; padding-left:18px;  list-style:none;"}</style>
+<div id="gradient" style="position: relative"><img alt="" style="position: absolute; top: 0px; right: -1px" src="https://img.bankwest.com.au/Blob/BW_Media/1292496208142.png" />
+<h2 style="line-height: 28px; font-family: 'BankwestRoundedBold','Arial'; color: #322832; font-size: 24px; font-weight: bold">You can now send money overseas online</h2>
+<p style="padding-bottom: 10px; font-family: 'Arial';"><strong>Save on a trip to the store and enjoy reduced fees</strong> with our new International Transfers payment option. All you need to do first is:</p>
+<img src="https://img.bankwest.com.au/Blob/BW_Media/1292510493882.png" style="float:right; padding-right:20px;" alt="" />
+<ul style="padding: 0px 0px 10px 0px; margin: 0px;">
+<li class="interceptBullet" style="list-style-type: none; padding-left: 18px; font-family: 'Arial';">set your daily International Transfer limit</li>
+<li class="interceptBullet" style="list-style-type: none; padding-left: 18px; font-family: 'Arial';">accept the changes to your account Terms &amp; Conditions</li>
+</ul>
+<p><a href="https://ibs.bankwest.com.au/CMWeb/Payments/Pay/Create.aspx"><img alt="" src="https://img.bankwest.com.au/Blob/BW_Media/1292510493661.png" border="0" /></a></p>
+</div>
+</div>
+<!--[if !IE]> END #contentColumn <![endif]--></div>
+					<div style="position: relative">
+						<div class="buttons clearfix" style="float: right; margin-right: 14px;">
+							<input type="submit" name="btnStartBanking" value="start banking" id="btnStartBanking" class="button primary" />
+						</div>
+						<div class="buttons clearfix" style="float: right; margin-right: 21px;">
+							<input type="submit" name="btnDontShowAgain" value="don't show me again" id="btnDontShowAgain" class="button secondary" />
+						</div>
+					</div>
+                </div>
+			</div>
+	
+<script language="JavaScript" type="text/javascript"><!--
+HideMenuBorder();
+//--></script></form>
+</body>
+
+
+</html>
+<!-- Request complete....... -->
